--- a/src/Style/style.scss
+++ b/src/Style/style.scss
@@ -104,7 +104,7 @@ hr {
 }
 
 .redColor {
-	color: rgb(255, 4, 13);
+	color: #ff5555;
 	font-size: 12px;
 }
 
@@ -688,6 +688,12 @@ a:hover {
 	}
 	.about_body_container .upPara {
 		font-size: 0.875rem;
+	}
+	.btn_cont_submit {
+		width: 100%;
+	}
+	.contact_container button {
+		width: 100% !important;
 	}
 }
 @media screen and (max-width: 668px) {
