--- a/src/Style/style.scss
+++ b/src/Style/style.scss
@@ -1,34 +1,27 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
 * {
 	padding: 0%;
 	margin: 0%;
 	box-sizing: border-box;
-	font-family: "Inter", sans-serif;
+	font-family: "Roboto", sans-serif;
 }
 
 // GLOBAL CLASSES START
-$themeColor: #161e2d;
+$themeColor: #374151;
 $themeColor2: #1f2937;
-$themeColor3: #01b0f9;
-$textColor: #e5e7eb;
+$themeColor3: #ff8811;
+$textColor: #6b7280;
 $textColor2: #d1d5db;
+$textColor3: #111827;
 $hrColor: #374151;
 // GLOBAL CLASSES START
 
 // GLOBAL CLASSES START
-body {
-	overflow-x: hidden;
-	// background: linear-gradient(180deg, #1f2937 0%, #111827 100%);
-	background: $themeColor;
-	width: 100%;
-	background-repeat: no-repeat;
-}
 html {
 	width: 100%;
 	font-size: 100%;
 	overflow-x: hidden;
-	background: $themeColor;
 	scroll-behavior: auto !important;
 }
 @media screen and (max-width: 992px) {
@@ -58,6 +51,10 @@ html {
 	margin-right: auto;
 }
 
+.f400 {
+	font-weight: 400;
+}
+
 .f500 {
 	font-weight: 500;
 }
@@ -68,6 +65,10 @@ html {
 
 .textColor2 {
 	color: $textColor2;
+}
+
+.textColor3 {
+	color: $textColor3;
 }
 
 .f500 {
@@ -82,8 +83,16 @@ html {
 	font-weight: 800;
 }
 
+.f900 {
+	font-weight: 900;
+}
+
 .themeBlue {
-	color: $themeColor3;
+	color: $themeColor3 !important;
+}
+
+.f24 {
+	font-size: 1.5rem;
 }
 
 .f14 {
@@ -108,6 +117,10 @@ hr {
 	font-size: 12px;
 }
 
+.themeColor {
+	color: $themeColor;
+}
+
 .pointer {
 	cursor: pointer;
 }
@@ -122,17 +135,16 @@ a:hover {
 	position: fixed;
 	top: 0%;
 	left: 0%;
-	background: $themeColor;
+	background: #fff;
 	width: 100%;
-	height: 72px;
-	border-bottom: 3px solid $themeColor3;
+	height: 64px;
 	z-index: 10;
 
 	ul {
 		li {
 			font-size: 0.875rem;
 			line-height: 17px;
-			margin: 0px 12px;
+			margin-right: 40px;
 
 			a {
 				transition: 0.6s;
@@ -141,10 +153,17 @@ a:hover {
 				color: $themeColor3;
 			}
 		}
-		.line {
-			padding: 1px;
-			background: #374151;
-			height: 22px;
+	}
+
+	button {
+		background: #ff8811;
+		border-radius: 6px;
+		height: 36px;
+		border: none;
+		padding: 0px 15px;
+
+		a {
+			color: #fff;
 		}
 	}
 }
@@ -152,7 +171,9 @@ a:hover {
 
 // HERO START
 .hero_container {
-	padding-top: 169px;
+	background-image: url("../assets/hero.svg");
+	margin-top: 64px;
+	padding-top: 100px;
 
 	.bottomText {
 		margin-bottom: 32px;
@@ -203,13 +224,21 @@ a:hover {
 
 // THREE CARDS START
 .threeCards_container {
-	padding: 96px 0rem 58px 0rem;
+	background: linear-gradient(360deg, #121924 0%, rgba(18, 25, 36, 0) 100%);
+
+	.inner_threeCards_container {
+		padding: 96px 0rem 58px 0rem;
+	}
 }
 // THREE CARDS END
 
 // SERVICES START
 .services_container {
 	padding: 4rem 0rem 5rem 0rem;
+
+	.topText {
+		margin-bottom: 6px;
+	}
 
 	ul {
 		margin-bottom: 0px;
@@ -243,6 +272,18 @@ a:hover {
 		max-width: 680px;
 		margin: auto;
 	}
+
+	.single_service {
+		position: relative;
+
+		.icon_title,
+		.icon_para {
+			position: absolute;
+			left: 50%;
+			top: 50%;
+			transform: translate(-50%, -50%);
+		}
+	}
 }
 .tablet_img {
 	margin-top: -2rem;
@@ -254,9 +295,8 @@ a:hover {
 
 // STARTED START
 .started_container {
-	background: linear-gradient(180deg, #01b0f9 0%, #1957c8 100%);
-	box-shadow: 0px 0px 60px 20px rgba(1, 176, 249, 0.1),
-		0px 1px 2px rgba(0, 0, 0, 0.2);
+	background: #1f2937;
+	box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2);
 	border-radius: 16px;
 	height: 232px;
 	overflow: hidden;
@@ -296,12 +336,22 @@ a:hover {
 			}
 		}
 	}
+
+	.img_container {
+		padding-right: 80px;
+
+		img {
+			height: 100%;
+		}
+	}
 }
 // STARTED END
 
 // FOOTER START
 .footer_container {
+	background: #d1d5db;
 	margin-top: 56px;
+	padding: 40px 0px;
 
 	p {
 		color: #6b7280;
@@ -324,39 +374,57 @@ a:hover {
 
 // SERVICE BANNER START
 .serviceBanner_container {
-	margin-top: 7rem;
+	background-image: url("../assets/serviceBg.png");
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	margin-top: 64px;
+	height: 466px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 
 	.innerServiceContainer {
-		display: flex;
-		align-items: center;
-		width: 100%;
-
-		.cont:nth-child(1) {
-			width: 27.5%;
-		}
-		.cont:nth-child(2) {
-			width: 45%;
-		}
-		.cont:nth-child(3) {
-			width: 27.5%;
-		}
-
-		h2 {
-			line-height: 48px;
-		}
-
-		p {
-			line-height: 24px;
-			font-size: 0.9rem;
-		}
+		max-width: 600px;
+		margin-left: auto;
+		margin-right: auto;
+		margin-bottom: 4rem;
 	}
 }
 // SERVICE BANNER END
 
 // SERVICE BODY START
 .service_body_container {
-	margin-top: 4rem;
-	margin-bottom: 5rem;
+	margin-top: -4.5rem;
+	margin-bottom: 64px;
+
+	.service_card {
+		box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.06);
+		border-radius: 16px;
+		min-height: 1px;
+		height: 100%;
+
+		.icon {
+			position: absolute;
+			bottom: -16px;
+			left: 24px;
+		}
+
+		.card_body {
+			background: #ffffff;
+			color: #111827;
+			padding: 36px 24px 20px 24px;
+
+			h1 {
+				line-height: 20px;
+			}
+
+			p {
+				color: #6b7280;
+				line-height: 21px;
+			}
+		}
+	}
 
 	p {
 		font-size: 0.8rem;
@@ -367,8 +435,21 @@ a:hover {
 
 // SUPPORT BODY START
 .support_container {
-	margin-bottom: 56px;
-	margin-top: 10rem;
+	margin-top: 59px;
+
+	// ACCORDION START
+	.custom_accordion {
+		max-width: 768px;
+		margin-left: auto;
+		margin-right: auto;
+		border-bottom: 1px solid #e5e7eb;
+		padding: 20px 0px;
+
+		&:nth-child(1) {
+			border-top: 1px solid #e5e7eb;
+		}
+	}
+	// ACCORDION END
 
 	h1 {
 		font-size: 2rem;
@@ -379,11 +460,11 @@ a:hover {
 		font-weight: 500;
 		line-height: 26px;
 
-		a {
-			color: $themeColor3;
-			border: none;
-			background: transparent;
-		}
+		// a {
+		// 	color: $themeColor3;
+		// 	border: none;
+		// 	background: transparent;
+		// }
 	}
 
 	.line {
@@ -392,17 +473,17 @@ a:hover {
 		width: 2px;
 	}
 
-	a {
-		background: #1f2937;
-		border: 1px solid #374151;
-		border-radius: 8px;
-		transition: 0.6s;
+	// a {
+	// 	background: #1f2937;
+	// 	border: 1px solid #374151;
+	// 	border-radius: 8px;
+	// 	transition: 0.6s;
 
-		&:hover {
-			border: 1px solid $themeColor3;
-			color: $themeColor3;
-		}
-	}
+	// 	&:hover {
+	// 		border: 1px solid $themeColor3;
+	// 		color: $themeColor3;
+	// 	}
+	// }
 
 	button {
 		border-radius: 8px;
@@ -421,141 +502,211 @@ a:hover {
 // SUPPORT BODY END
 
 // ABOUT BODY START
-.about_body_container {
-	margin-top: 8rem;
+.about_banner_container {
+	margin-top: 64px;
+	background-image: url("../assets/about.png");
+	height: 416px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 
-	.btns {
-		background: #1f2937;
-		border: 1px solid #374151;
-		border-radius: 8px;
-		height: 44px;
-	}
+	.innerAboutContainer {
+		max-width: 680px;
 
-	.upPara {
-		line-height: 26px;
-	}
-	.downPara {
-		line-height: 21px;
-	}
-	.bottomCont {
-		h6 {
-			line-height: 20px;
+		h1 {
+			line-height: 48px;
 		}
-	}
 
-	h5 {
-		line-height: 32px;
-	}
+		h6 {
+			line-height: 16px;
+		}
 
-	.iconText {
-		margin-left: 12px;
-	}
-
-	.oMission {
-		margin-bottom: 6px;
+		p {
+			line-height: 26px;
+		}
 	}
 }
 // ABOUT BODY END
 
 // CONTACT BODY START
+.contact_banner_Container {
+	background-image: url("../assets/contact/hero.png");
+	background-position: center;
+	background-repeat: no-repeat;
+	margin-top: 64px;
+	height: 271px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
 .contact_container {
-	margin-top: 9rem;
-	margin-bottom: 56px;
+	max-width: 768px;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 64px;
+	margin-bottom: 94px;
 
-	h1 {
-		font-size: 2rem;
+	.g-4,
+	.gy-4 {
+		--bs-gutter-y: 20px;
 	}
 
-	p {
-		line-height: 26px;
-
-		a {
-			color: $themeColor3;
-			border: none;
-			background: transparent;
-			transition: 0.6s;
-
-			&:hover {
-				background: #ebebeb;
-				border: none;
-			}
-		}
-
-		.textLink:hover {
-			color: $themeColor3;
-			background-color: transparent;
-			border: none;
-		}
-	}
-
-	.line {
-		height: 100%;
-		background: rgba(255, 255, 255, 0.1);
-		width: 1px;
-	}
-
-	a {
-		background: #1f2937;
-		border: 1px solid #374151;
+	input {
+		padding: 0px 15px;
+		height: 38px;
+		border: 1px solid #d1d5db;
+		box-sizing: border-box;
+		filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.05));
 		border-radius: 8px;
-		transition: 0.6s;
+		color: #111827;
 
-		&:hover {
-			border: 1px solid $themeColor3;
-			color: $themeColor3;
+		&:focus {
+			outline: none;
+		}
+	}
+
+	label {
+		margin-bottom: 2px;
+
+		span {
+			opacity: 0.75;
 		}
 	}
 
 	button {
+		background: #ff8811;
 		border-radius: 8px;
+		width: 77px;
 		height: 44px;
+		color: #fff;
+		border: none;
 	}
 
-	.form_container {
-		input {
-			height: 38px;
+	textarea {
+		border: 1px solid #d1d5db;
+		box-sizing: border-box;
+		filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.05));
+		border-radius: 8px;
+		height: 205px;
+		padding: 15px;
+		resize: none;
+
+		&:focus {
+			outline: none;
 		}
-
-		input,
-		textarea {
-			background: #1f2937;
-			border: 1px solid #374151;
-			border-radius: 8px;
-			color: #d1d5db;
-			font-size: 14px;
-			padding: 0px 12px;
-
-			&:focus {
-				outline: none;
-			}
-		}
-		textarea {
-			resize: none;
-			padding: 12px;
-			height: 185px;
-
-			&:focus {
-				outline: none;
-			}
-		}
-	}
-
-	.mtContact {
-		margin-top: 20px;
-	}
-	.mtContact:nth-child(1) {
-		margin-top: 0px;
-	}
-	.mtContact:nth-child(2) {
-		margin-top: 0px;
-	}
-
-	input::-webkit-outer-spin-button,
-	input::-webkit-inner-spin-button {
-		display: none;
 	}
 }
 // CONTACT BODY END
+
+// SUPPORT START
+.support_banner_Container {
+	background-image: url("../assets/support.png");
+	background-position: center;
+	background-repeat: no-repeat;
+	margin-top: 64px;
+	height: 271px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+// SUPPORT END
+
+// QUESTION START
+.question_container {
+	background: #f3f4f6;
+	height: 258px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin-top: 64px;
+
+	h3 {
+		color: #111827;
+		line-height: 28px;
+		font-size: 24px;
+		font-weight: 900;
+	}
+
+	p {
+		line-height: 26px;
+	}
+
+	.btn {
+		background: #1f2937;
+		border-radius: 8px;
+		height: 44px;
+		width: 112px;
+		font-size: 14px;
+		line-height: 26px;
+		font-weight: 500;
+		color: #ffffff;
+	}
+}
+// QUESTION END
+
+// ABOUT LIST START
+.about_list_container {
+	position: relative;
+	max-width: 1040px;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: -2rem;
+
+	.row_list {
+		background: #ffffff;
+		box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.06);
+		border-radius: 16px;
+		padding: 10px 32px;
+	}
+}
+
+.about_body_container {
+	max-width: 1060px;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 3rem;
+
+	.border_right {
+		border-left: 1px solid #e5e7eb;
+		padding-left: 2.2rem;
+	}
+
+	p {
+		line-height: 21px;
+	}
+}
+// ABOUT LIST END
+
+// TECHNICAL ASSISTANCE START
+.technical_assistance_container {
+	background: #f3f4f6;
+	padding-top: 64px;
+	padding-bottom: 56px;
+
+	.inner_technical_assistance_container {
+		max-width: 768px;
+		margin-left: auto;
+		margin-right: auto;
+
+		.single_cta_container {
+			background: #1f2937;
+			box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1),
+				0px 1px 2px rgba(0, 0, 0, 0.06);
+			border-radius: 16px;
+			padding: 24px 0px;
+		}
+	}
+
+	.text_head {
+		margin-bottom: 48px;
+
+		a {
+			color: #1676be;
+		}
+	}
+}
+// TECHNICAL ASSISTANCE END
 
 // MEDIA QUERIES START
 @media screen and (min-width: 575px) {
@@ -604,9 +755,6 @@ a:hover {
 		button {
 			width: 100%;
 		}
-	}
-	.support_container {
-		margin-top: 133px;
 	}
 	.started_container .first {
 		width: 60%;
@@ -705,13 +853,26 @@ a:hover {
 	.contact_container button {
 		width: 100% !important;
 	}
+	.about_list_container {
+		max-width: 635px;
+		margin-left: auto;
+		margin-right: auto;
+	}
+	.about_body_container {
+		margin-top: 64px;
+	}
+	.about_body_container .border_right {
+		padding-left: 12px;
+		border-left: none;
+		border-top: 1px solid #e5e7eb;
+		margin-top: 40px;
+		padding-top: 40px;
+	}
 }
 @media screen and (max-width: 668px) {
 	.started_container .first {
 		width: 64%;
 	}
-}
-@media screen and (max-width: 668px) {
 	.started_container .first {
 		width: 60%;
 	}
@@ -723,9 +884,6 @@ a:hover {
 	}
 }
 @media screen and (max-width: 575px) {
-	.support_container {
-		margin-top: 154px;
-	}
 	.hero_container {
 		padding-top: 154px;
 
