--- a/src/Style/style.css
+++ b/src/Style/style.css
@@ -12,6 +12,8 @@ html {
   font-size: 100%;
   overflow-x: hidden;
   scroll-behavior: auto !important;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
 }
 
 @media screen and (max-width: 992px) {
@@ -36,6 +38,16 @@ html {
   html {
     font-size: 100%;
   }
+}
+
+button {
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+button:hover {
+  -webkit-transform: translateY(-4px);
+          transform: translateY(-4px);
 }
 
 .page_container {
@@ -154,6 +166,8 @@ a:hover {
   height: 36px;
   border: none;
   padding: 0px 15px;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
 }
 
 .header_container button a {
@@ -285,6 +299,7 @@ a:hover {
 }
 
 .started_container {
+  margin-top: 56px;
   background: #1f2937;
   -webkit-box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2);
@@ -319,19 +334,11 @@ a:hover {
 }
 
 .started_container .first .btn_cont button {
+  background: #ff8811;
+  color: #ffff;
   height: 44px;
   width: 105px;
-}
-
-.started_container .first button {
-  background: #ffff;
   border-radius: 6px;
-  -webkit-transition: 0.6s;
-  transition: 0.6s;
-}
-
-.started_container .first button:hover {
-  background: #ebebeb;
 }
 
 .started_container .img_container {
@@ -697,6 +704,66 @@ a:hover {
 
 .technical_assistance_container .text_head a {
   color: #1676be;
+}
+
+.stack_competition_container {
+  padding: 80px 0px;
+  background: #f3f4f6;
+}
+
+.stack_competition_container .table_container .left_side div {
+  color: #374151;
+  line-height: 20px;
+  font-size: 14px;
+  font-weight: 400;
+  border-bottom: 1px solid #e5e7eb;
+  padding: 0.6rem 0rem;
+}
+
+.stack_competition_container .table_container .left_side div:nth-last-child(1) {
+  border-bottom: none;
+}
+
+.stack_competition_container .table_container .right_side_head {
+  background: #fff;
+  border-radius: 16px 16px 0px 0px;
+  -webkit-box-shadow: 0px -1px -1px rgba(0, 0, 0, 0.1), 0px -1px -1px rgba(0, 0, 0, 0.06);
+          box-shadow: 0px -1px -1px rgba(0, 0, 0, 0.1), 0px -1px -1px rgba(0, 0, 0, 0.06);
+}
+
+.stack_competition_container .table_container .right_side_head div {
+  color: #111827;
+  font-size: 14px;
+  font-weight: 500;
+  padding: 0.6rem 0rem;
+}
+
+.stack_competition_container .table_container .right_side_head div img {
+  max-width: 90px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.stack_competition_container .table_container .right_side_body {
+  -webkit-box-shadow: 0px -1px -1px rgba(0, 0, 0, 0.1), 0px -1px -1px rgba(0, 0, 0, 0.06);
+          box-shadow: 0px -1px -1px rgba(0, 0, 0, 0.1), 0px -1px -1px rgba(0, 0, 0, 0.06);
+}
+
+.stack_competition_container .table_container .right_side_body div {
+  padding: 0.5rem 0rem;
+}
+
+.stack_competition_container .table_container .right_side_body div img {
+  height: 16px;
+  width: 16px;
+}
+
+.stack_competition_container .table_container .right_side_body:nth-last-child(1) div:nth-last-child(1) {
+  border-radius: 0px 0px 16px 0px;
+}
+
+.stack_competition_container .table_container .right_side_body:nth-last-child(1) div:nth-last-child(3) {
+  border-radius: 0px 0px 0px 16px;
 }
 
 @media screen and (min-width: 575px) {
