--- a/src/Style/style.scss
+++ b/src/Style/style.scss
@@ -81,10 +81,6 @@ button:hover {
 	color: $textColor3;
 }
 
-.f500 {
-	font-weight: 500;
-}
-
 .f600 {
 	font-weight: 600;
 }
@@ -435,12 +431,26 @@ a:hover {
 			position: absolute;
 			bottom: -16px;
 			left: 24px;
+			z-index: 1;
+		}
+
+		.card_bg_up {
+			&::after {
+				content: "";
+				height: 1rem;
+				width: 100%;
+				background: #fff;
+				position: absolute;
+				left: 0%;
+				bottom: -0.8rem;
+			}
 		}
 
 		.card_body {
 			background: #ffffff;
 			color: #111827;
 			padding: 36px 24px 20px 24px;
+			border-radius: 0px 0px 16px 16px;
 
 			h1 {
 				line-height: 20px;
@@ -841,6 +851,7 @@ a:hover {
 
 // STACK UP TABLE START
 .stack_competition_container {
+	width: 100%;
 	margin-bottom: 56px;
 	padding: 80px 0px;
 	background: #f3f4f6;
@@ -1212,7 +1223,7 @@ a:hover {
 		.btn_container {
 			padding: 0px 5px;
 			display: flex;
-			justify-content: space-between;
+			gap: 24px;
 		}
 	}
 	.header_container {
@@ -1314,6 +1325,12 @@ a:hover {
 		.single_table_inner_body
 		div:nth-child(1) {
 		border-radius: 0px 16px 0px 0px;
+	}
+	.services_container .single_service:hover .icon_para {
+		display: none;
+	}
+	.services_container .single_service:hover .icon_title {
+		display: flex;
 	}
 }
 // MEDIA QUERIES END
